Commit 1: Edited index + url's

--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,2 @@
+jonahbrandwagt=https://www.jonahbrandwagt.com
 google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
